# OS-Course-Lab

./: .commitlintrc.json  .envrc  .gdbinit  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE  book.toml  chbuild  config.cmake  flake.nix
Lab1/kernel/arch/aarch64/: CMakeLists.txt
Lab5/kernel/: CMakeLists.txt
Lab5/kernel/arch/aarch64/: CMakeLists.txt
Lab5/kernel/include/common/: asm.h  kprint.h
Lab5/kernel/include/mm/: kmalloc.h  slab.h  vmspace.h
Lab5/kernel/include/object/: cap_group.h  irq.h  memory.h  object.h  ptrace.h  thread.h  user_fault.h
Lab5/kernel/irq/: CMakeLists.txt
Lab5/kernel/lib/: CMakeLists.txt
Lab5/kernel/mm/: CMakeLists.txt
Lab5/kernel/object/: CMakeLists.txt  user_fault.c
Lab5/kernel/syscall/: CMakeLists.txt
Lab5/kernel/user-include/uapi/: memory.h  syscall_num.h
Lab5/user/system-services/: CMakeLists.txt
Lab5/user/system-services/system-servers/: CMakeLists.txt
Lab5/user/tests/fs_tests/: CMakeLists.txt  fs_test_concurrency.c  fs_test_full.c  fs_test_mmap.c
Lab6/user/apps/: CMakeLists.txt  wayland_demo.c
Lab6/user/apps/fs_tests/: fs_test_full.c  fs_test_mmap.c
Lab6/user/apps/lv_gba_emu/: .gitignore  CMakeLists.txt  LICENSE  main.c
Lab6/user/apps/lv_lib_100ask/: .gitignore  Kconfig  LICENSE  README.md  README_zh.md  component.mk  library.properties  lv_2048.c  lv_cal.c  lv_file.c  lv_lib_100ask.mk  lv_lib_100ask_conf.h  lv_memgame.c
Lab6/user/chcore-libs/: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Config.cmake.in  config.cmake  copy.bara.sky
Lab6/user/chcore-libs/drivers/: CMakeLists.txt
Lab6/user/chcore-libs/graphic/: CMakeLists.txt
Lab6/user/chcore-libs/sys-libs/: CMakeLists.txt
SocketLab/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  requirements.txt
SocketLab/examples/: CMakeLists.txt  json.c  llama.c
SocketLab/frontend/: Makefile
SocketLab/frontend/node_proxy/: Makefile  package-lock.json  package.json
SocketLab/frontend/node_proxy/src/: proxy.js
SocketLab/frontend/website/: index.html
SocketLab/frontend/website/assets/: index-4A6FaGeI.js  index-CSyMSqLy.css
SocketLab/grade/: .gitignore  Makefile  client_test.py  common.py  common_exceptions.py  concurrency_test.py  connect.js  epoll_test.py  grade.py  message_model.py  package-lock.json  package.json  server_test.py  std_answer.py
SocketLab/include/: config.h  server.h
SocketLab/include/json/: simple_json.h
SocketLab/include/llama/: simple_llama_chat.h
SocketLab/lib/: CMakeLists.txt
SocketLab/lib/json/: CMakeLists.txt  simple_json.cpp
SocketLab/lib/llama/: CMakeLists.txt  simple_llama_chat.cpp
SocketLab/models/: .gitignore  README.md
SocketLab/ref/: .gitignore  CMakeLists.txt  client  client.py  llama.py  message_model.py  server  server.py
SocketLab/ref/pyx/: CMakeLists.txt  pyclient.pyx  pyserver.pyx
SocketLab/src/: CMakeLists.txt  client.c  server.c  server_epoll.c
kernel/tests/unit/mm/: CMakeLists.txt  test_multi_buddy.c  test_vmr_split.c
tests/: CMakeLists.txt  README.md
user/apps/: .gitignore  CMakeLists.txt  config.cmake
user/apps/demos/: CMakeLists.txt  capture_image_demo.c  car_demo.c  lidar_demo.c
user/apps/demos/black_square/: CMakeLists.txt  main.c
user/apps/demos/lvgl/: CMakeLists.txt  README.md
user/apps/demos/poker_slide/: CMakeLists.txt  GuiLite.h  UIcode.cc  main.cc
user/apps/samples/: CMakeLists.txt  cat.c  client.c  diff.c  get_system_info.c  hello_world.c  irq.c  mount.c  pc.c  pmu.c  server.c  static_sample.c  tcp_echo_server.c  udp_echo_server.c
user/apps/samples/cxx/: CMakeLists.txt  fooxx.cpp  hello_cpp.c  hello_cpp_std.cpp
user/apps/samples/dynamic_link/: CMakeLists.txt  foo.c  main.c
user/apps/samples/ramdisk_rebuild/: CMakeLists.txt  README.md  hello_chcore.c
user/apps/samples/simple_http_server/: CMakeLists.txt  header.h  main.c  request.h
user/apps/tests/: CMakeLists.txt  README.md  poll_client.c  poll_server.c  test_access_libc_pmo.c  test_all.c  test_audio.c  test_cap.c  test_cap_server.c  test_clockgettime.c  test_div_zero.c  test_dynamic_pmo.c  test_epoll_efd_tfd.c  test_epoll_net.c  test_eventfd.c  test_fork_loop.c  test_fpu.c  test_fs.c  test_funmap.c  test_gdb.c  test_hello.c  test_invalid_pgfault.c  test_ipc.c  test_ipc_perf.c  test_ipc_server.c  test_long_term_running.c  test_malloc.c  test_mm_leakage.c  test_mprotect.c  test_mutex_ceiling.c  test_net.c  test_net_client.c  test_net_server.c  test_notifc.c  test_orphan.c  test_poll_efd_tfd.c  test_poll_net.c  test_pthread.c  test_revoke_all_libc_pmo.c  test_revoke_pmo_without_unmap.c  (+14 more)
user/apps/tests/api_tests/: CMakeLists.txt
user/apps/tests/develop/: CMakeLists.txt  test_dm.c  test_ext4.c  test_fat32_multi.c  test_fat32_multi_child1.c  test_fat32_multi_child2.c  test_fat32_multi_child3.c  test_fat32_single.c  test_fat_perf.c  test_flash.c  test_fsm_ext4.c  test_fsm_fat_child1.c  test_fsm_fat_child2.c  test_fsm_fat_child3.c  test_fsm_fat_multi.c  test_fsm_fat_partition.c  test_fsm_fat_single.c  test_pagecache_perf.c  test_register_window.c  test_sd.c  test_sd_mbr.c
user/apps/tests/fs_tests/: CMakeLists.txt  README.md  fs_test_full.c  fs_test_littlefs.c
user/apps/tests/perf_tests/: CMakeLists.txt  blank.c  perf_create_process.c  perf_cs.c  perf_fs.c  perf_ipc.c  perf_ipc_server.c  perf_notific.c  perf_pgfault.c  perf_process_switch.c  perf_pthread.c  perf_second_process.c  perf_semb.c  perf_semphore.c  perf_syscall.c
user/apps/tests/rt_tests/: CMakeLists.txt  common.h  rt_notifc_test.c  rt_sleep_test.c
user/apps/tests/test_tools/: CMakeLists.txt  test_tools.c  test_tools.h
user/apps/tests/vx_tests/: CMakeLists.txt  test_vx_intlock.c  test_vx_msg.c  test_vx_sem.c  test_vx_task.c  test_vx_utils.c
user/chcore-libs/graphic/wayland/: CMakeLists.txt
user/chcore-libs/sys-libs/: CMakeLists.txt
user/chcore-libs/sys-libs/bounds_checking_functions/: CMakeLists.txt
user/chcore-libs/sys-libs/dev_messenger/: CMakeLists.txt  dev_messenger.c  uvc_messenger.c  (+1 more)
user/system-services/system-servers/: CMakeLists.txt  config.cmake
(+2485 files in other folders)
